Make sure renaming box doesn't overflow

--- a/client/style.css
+++ b/client/style.css
@@ -443,6 +443,7 @@ input::-webkit-input-placeholder { color: #999 }
     padding: 0 .25em;
     flex: 1 1;
     display: inline-block;
+    overflow: hidden;
 }
 
 .inline-namer { background: transparent }
